@@ -14,6 +14,7 @@ BUG FIXES
     o Improved speed accessing columns of Hashmat sparse matrices
     o In 'pixelApply' and 'featureApply', zero-length return values
         are no longer returned as a list when '.simplify=FALSE'
+    o Function 'peakAlign.diff' should be more memory efficient now
 
 CHANGES IN VERSION 1.3.0 [2015-12-16]
 -----------------------------------
